--- a/index.html
+++ b/index.html
@@ -5,34 +5,41 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Calls App</title>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="app"></div>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  <center>
+    <h2>Start your Engines</h2>
+    <table>
+      <tr>
+        <td with="50%">
+          <h3>Local</h3>
+          <video id="webcamVideo" autoplay playsinline></video>
+        </td>
+        <td with="50%">
+          <h3>Remote</h3>
+          <video id="remoteVideo" autoplay playsinline></video>
+        </td>
+      </tr>
+    </table>
+    <button id="webcamButton">1. Start webcam </button>
+    <button id="callButton">2. Create Room</button>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
+    <h2>Send Room ID to your friend</h2>
+    <p>
+      Room ID <input id="callInput" />
+    </p>
 
-  <script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-      apiKey: "AIzaSyCf_pBURQ19U5mWEuKbzkHDvZYHf4gRVTo",
-      authDomain: "adtown-1025.firebaseapp.com",
-      projectId: "adtown-1025",
-      storageBucket: "adtown-1025.appspot.com",
-      messagingSenderId: "57378149116",
-      appId: "1:57378149116:web:aca4a8dd2474dabbb2bd79",
-      measurementId: "G-M8TTH284B1"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-  </script>
+    <button id="answerButton">1. Answer</button>
+    <button id="hangupButton" disabled>2. Hangup</button>
+  </center>
+
   <script type="module" src="/main.js"></script>
 </body>
 
